--- a/index.html
+++ b/index.html
@@ -62,27 +62,27 @@
         <br>
         <div class="container"><!--container-->
 <!-----------------------Carroussel------------------------------------------>
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="4000">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="./img/1.fws.gif" alt="Primeiro Slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="./img/2.fws.gif" alt="Segundo Slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="./img/3.fws.gif" alt="Terceiro Slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Anterior</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Próximo</span>
-  </a>
-</div>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="4000">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="./img/1.fws.gif" alt="Primeiro Slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./img/2.fws.gif" alt="Segundo Slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./img/3.fws.gif" alt="Terceiro Slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Próximo</span>
+              </a>
+            </div>
 
   <!---seção carousell-->
 
@@ -119,7 +119,7 @@
   
 <!----------------Fim-------Cards------------------------------------------>
 <!--------------------seção-rodapé------------------------------------>
-<section style="margin-top: 100px;">
+<section>
   <footer class="footer">
   
     <div class="container">
@@ -134,7 +134,7 @@
             <form class="form" id="newsletterForm" method="post">
               <input class="campo" name="name" placeholder="Nome" required="">
               <input class="campo" name="email" type="email" placeholder="E-mail" required="">
-              <button type="submit" class="btn" style="color: white;">Assinar</button>
+              <button type="submit" class="btn" >Assinar</button>
             </form>
   
           </div>
